WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22926
Uninitialized memory in Settings.cc m_textDirectionSubmenuInclusionBehavior
https://bugs.webkit.org/show_bug.cgi?id=22926
Summary
Uninitialized memory in Settings.cc m_textDirectionSubmenuInclusionBehavior
Pam Greene (IRC:pamg)
Reported
2008-12-18 16:47:53 PST
The new(ish) m_textDirectionSubmenuInclusionBehavior member of Settings isn't initialized. This shows up when running editing/selection/5354455-1.html. (It was caught in Chromium running under Purify, as it happens, but that's not pertinent here.)
Attachments
Add initializer to ctor
(1020 bytes, patch)
2008-12-18 16:51 PST
,
Pam Greene (IRC:pamg)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pam Greene (IRC:pamg)
Comment 1
2008-12-18 16:51:42 PST
Created
attachment 26133
[details]
Add initializer to ctor I wasn't certain which of the three choices to initialize this to. Please verify my guess.
Pam Greene (IRC:pamg)
Comment 2
2008-12-18 17:50:00 PST
Landed in
r39387
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug