2008-12-18  Pamela Greene  <pam@chromium.org>

Reviewed by Dan Bernstein.

        Add initializer for m_textDirectionSubmenuInclusionBehavior.
        https://bugs.webkit.org/show_bug.cgi?id=22926

        * page/Settings.cpp:
        (WebCore::Settings::Settings): Initialize m_textDirectionSubmenuInclusionBehavior



Canonical link: https://commits.webkit.org/31590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39387 268f45cc-cd09-0410-ab3c-d52691b4dbfc